--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -220,16 +220,16 @@
     {
      "data": {
       "text/plain": [
-       "'vandelay.comwww.'"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"www.\" ='vandelay.com' + 'www.' # 'www.vandelay.com'"
+    "\"www.\" + 'vandelay.com' # 'www.vandelay.com'"
    ]
   },
   {
